--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body class="body-index">
+<body class="body-form">
 <header>
     <nav  class="navbar fixed-top navbar-expand-sm" style="background-color:#3f3f3f;">
         <a class="navbar-brand"><font color="#F5F5F5">Visa</font></a>
@@ -34,30 +34,5 @@
     </nav>
 </header>
 
-<main role="main" class="inner cover">
-    <div class="container" style="margin-top: 200px">
-        <div class="align-middle">
-            <div style="text-align: justify;">
-                <h1 class="text-center align-center" style="color:#F5F5F5">Делаем путешествия проще, чем когда-либо</h1>
-                <p class="lead text-center" style="margin-top: 3%; color: #f5f5f5;">Закажи визу и свободно путешествуй по миру </p>
-            </div>
-            <hr style="border-top: 3px solid #FFC107; width: 50px">
-            <button class="btn" type="button" onclick="openForm()" id="MenuButton"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Заказать</button>
-
-        </div>
-
-    </div>
-</main>
-
-<footer>
-
-</footer>
-
-<script>
-    function openForm() {
-        window.location.href='form.html';
-    }
-</script>
 </body>
 </html>
