--- a/untitled folder/services.html
+++ b/untitled folder/services.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-	<nav  class="navbar fixed-top navbar-expand-sm" style="background-color:#616161;">
+	<nav  class="navbar fixed-top navbar-expand-sm" style="background-color:#3f3f3f;">
 	<a class="navbar-brand"><font color="#F5F5F5">Visa</font></a>
 <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="nav navbar-nav">
@@ -30,35 +30,37 @@
 
 <br><br><br>
 <div style="color:; text-align: center;">
-<h1><p>Наши услуги</p></h1>
+<h1><p>Основные преимущества</p></h1>
+<hr style="border-top: 1px solid #FFC107; width: 20px">
+<hr style="border-top: 1px solid #FFC107; width: 130px">
+<hr style="border-top: 1px solid #FFC107; width: 20px">
 </div>
 <div style="color:#9E9E9E; text-align: center;">
-<small><div >Специально для Вас мы разработали самые востребованные услуги на рынке.</div>
-<div>Выберете себе наиболее подходящую.</div></small>
+<div>Специально для Вас мы разработали самые востребованные услуги на рынке.</div>
 </div>
 <br>
 <div class="container">
 <div class="col-sm-12">
 <div class="card-deck">
   <div class="card bg-light mb-3" style="max-width: 21rem;box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-  <div class="card-header">Header</div>
+  
   <div class="card-body">
-    <h5 class="card-title">Light card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h6 class="card-title"><b>Цена</b></h6><hr>
+    <p class="card-text">Мы регулярно мониторим стоимость виз и можем Вам сообщить, что наши цены самые низкие.</p>
   </div>
 </div>
  <div class="card bg-light mb-3" style="max-width: 21rem;box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-  <div class="card-header">Header</div>
+  
   <div class="card-body">
-    <h5 class="card-title">Light card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h6 class="card-title"><b>Работаем официально</b></h6><hr>
+    <p class="card-text">Легальность гарантирует качество и прозрачность предоставляемых услуг.</p>
   </div>
 </div>
  <div class="card bg-light mb-3" style="max-width: 21rem;box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-  <div class="card-header">Header</div>
+
   <div class="card-body">
-    <h5 class="card-title">Light card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h6 class="card-title"><b>Гарантия услуг качества</b></h6><hr>
+    <p class="card-text">Подписываем с вами договор, который гарантирует выполнение всех наших обязательств.</p>
    
   </div>
 </div>
@@ -69,24 +71,24 @@
 <div class="col-sm-12">
 <div class="card-deck">
   <div class="card bg-light mb-3" style="max-width: 21rem;box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-  <div class="card-header">Header</div>
+  
   <div class="card-body">
-    <h5 class="card-title">Light card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h6 class="card-title"><b>Современный качественный сервис</b></h6><hr>
+    <p class="card-text">Доступ в личный кабинет с актуальным статусом вашей визы и SMS-уведомлениями.</p>
   </div>
 </div>
  <div class="card bg-light mb-3" style="max-width: 21rem;box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-  <div class="card-header">Header</div>
+  
   <div class="card-body">
-    <h5 class="card-title">Light card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h6 class="card-title"><b>Тысячи довольных клиентов</b></h6><hr>
+    <p class="card-text">Подтверждением чего является множество положительных отзывов и лидерство на рынке.</p>
   </div>
 </div>
  <div class="card bg-light mb-3" style="max-width: 21rem;box-shadow: 0 0 10px rgba(0,0,0,0.3);">
-  <div class="card-header">Header</div>
+ 
   <div class="card-body">
-    <h5 class="card-title">Light card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h6 class="card-title"><b>Работаем со всеми регионами Украины</b></h6><hr>
+    <p class="card-text">Если Вы находитесь в другом городе - не проблема. Прислать документы можно любой курьерской службой.</p>
    
   </div>
 </div>
@@ -94,6 +96,27 @@
 </div>
 </div>
 
+<div class="container">
+<div class="col-sm-12">
+<div class="card-deck">
+  <div class="card bg-light mb-3" style="max-width: 21rem;box-shadow: 0 0 10px rgba(0,0,0,0.3);">
+  
+  <div class="card-body">
+    <h6 class="card-title"><b>Виза в чистый паспорт</b></h6><hr>
+    <p class="card-text">Оформление визы даже в паспорт без визовой истории.</p>
+  </div>
+</div>
+ <div class="card bg-light mb-3" style="max-width: 21rem;box-shadow: 0 0 10px rgba(0,0,0,0.3);">
+  
+  <div class="card-body">
+    <h6 class="card-title"><b>Срочность</b></h6><hr>
+    <p class="card-text">Получение Шенгена в самые короткие сроки.</p>
+  </div>
+</div>
+ 
+</div>
+</div>
+</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
