--- a/це/services.html
+++ b/це/services.html
@@ -118,6 +118,61 @@
 </div>
 </div>
 </div>
+<nav  class="navbar  navbar-expand-sm" style="background-color:#3f3f3f;">
+</nav>
+<nav  class="navbar  navbar-expand-sm" style="background-color:#3f3f3f;">
+
+
+<div class="container">
+<div class="float-left" style="color:#BDBDBD; text-align: center;"><h5>VISA это</h5>
+  <hr style="border-top: 1px solid #FFC107; width: 30px">
+<p>100% гарантия получения необходимой визы</p>
+<p>и прозрачность предоставляемых услуг.</p>
+<center><button class="btn" href="#" style="background-color:#3f3f3f;"><img class="d-block w-10" src="if_facebook_986944.png"></button></center>
+
+</div><br>
+<div class="float-right" style="color:#BDBDBD;text-align: center;"><h5>Свяжитесь с нами</h5>
+<hr style="border-top: 1px solid #FFC107; width: 30px">
+
+<p>г.Харьков,ул.Целиноградская 36, 3 этаж</p>
+<p>Viber/WhatsApp: <a href="#" style="color:#BDBDBD;">+38 (063) 873 7888</a></p>
+<p><a href="#" style="color:#BDBDBD;">info@visa@gmail.com</a></p></div><br>
+<div class="float-none" style="color:#BDBDBD;text-align: center;"><h5>Остались вопросы</h5>
+  <hr style="border-top: 1px solid #FFC107; width: 30px">
+
+<p>Оставьте свой телефон и наш</p>
+<p>менеджер перезвонит вам</p>
+<div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Ваш номер" aria-label="Recipient's username" aria-describedby="button-addon2">
+  <div class="input-group-append">
+    <button class="btn btn-outline-warning" type="button" id="button-addon2" data-toggle="modal" data-target="#myModal" style="color:#BDBDBD;"><img class="d-block w-10" src="2303199-24.png" alt="First slide"></button>
+    <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          
+        </div>
+        <br>
+         <div style="text-align: center;"><p>Ожидайте звонка от администратора!</p></div>
+        
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
+</div><br>
+</div>
+</nav>
+<nav  class="navbar  navbar-expand-sm" style="background-color:#212121;">
+  
+<font color="#BDBDBD">2018 © Visa. Все права защищены.</font>
+
+
+</nav>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
