--- a/form.html
+++ b/form.html
@@ -37,27 +37,27 @@
 <main>
     <p class="lead text-center" style="margin-top: 7%;">Для заказа визы заполните форму:</p>
     <p class="text-muted text-center" style="margin-top: -1%">Обязательные поля обозначены звездочкой *</p>
-    <form>
+    <form class="needs-validation" novalidate>
         <div class="form-row col-md-8" style="margin-left: 27%">
             <div class="form-group col-md-8">
                 <label for="inputSurname">Фамилия*</label>
-                <input type="text" class="form-control" id="inputSurname" placeholder="Иванов">
+                <input type="text" class="form-control is-req" id="inputSurname" placeholder="Иванов" required>
             </div>
             <div class="form-group col-md-8">
                 <label for="inputName">Имя*</label>
-                <input type="text" class="form-control" id="inputName" placeholder="Иван">
+                <input type="text" class="form-control is-req" id="inputName" placeholder="Иван" required>
             </div>
             <div class="form-group col-md-8">
                 <label for="inputEmail4">Email*</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="example@gmail.com">
+                <input type="email" class="form-control is-req" id="inputEmail4" placeholder="example@gmail.com" required>
             </div>
             <div class="form-group col-md-8">
                 <label for="inputPhone">Номер телефона для обратной связи*</label>
-                <input type="number" class="form-control" id="inputPhone" placeholder="+38-095-000-00-00">
+                <input type="number" class="form-control is-req" id="inputPhone" placeholder="+38-095-000-00-00" required>
             </div>
             <div class="form-group col-md-8">
                 <label for="inputCountry">Страна*</label>
-                <select id="inputCountry" class="form-control">
+                <select id="inputCountry" class="form-control is-req" required>
                     <option selected disabled>Укажите страну</option>
                     <option>Украина</option>
                     <option>Россия</option>
@@ -66,7 +66,7 @@
             </div>
             <div class="form-group col-md-8">
                 <label for="inputCity">Город*</label>
-                <input type="text" class="form-control" id="inputCity" placeholder="Харьков">
+                <input type="text" class="form-control is-req" id="inputCity" placeholder="Харьков" required>
             </div>
             <div class="form-group col-md-8">
                 <label for="inputAddress">Адрес</label>
@@ -74,7 +74,7 @@
             </div>
             <div class="form-group col-md-8">
                 <label for="inputDestination">Страна назначения*</label>
-                <select id="inputDestination" class="form-control">
+                <select id="inputDestination" class="form-control is-req" required>
                     <option selected disabled>Укажите страну</option>
                     <option>США</option>
                     <option>Польша</option>
@@ -87,26 +87,68 @@
             </div>
             <div class="form-group col-md-8">
                 <label for="inputVisa">Вид визы*</label>
-                <input type="text" class="form-control" id="inputVisa" placeholder="Туристическая виза" disabled>
+                <input type="text" class="form-control" id="inputVisa" placeholder="Туристическая виза" readonly>
             </div>
             <div class="form-group col-md-8">
                 <label for="inputTime">Дата и время приема*</label>
-                <input type="datetime-local" class="form-control" id="inputTime">
+                <input type="datetime-local" class="form-control is-req" id="inputTime" required>
             </div>
 
             <div class="form-group col-md-8">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
-                    <label class="form-check-label" for="gridCheck">
+                    <input class="form-check-input" type="checkbox" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
                         С необходимым списком документов ознакомлен(а)
                     </label>
+                    <div class="invalid-feedback" id="invalidCheckMessage" style="display: none">
+                        Пожалуйста, ознакомьтесь со списком документов, прежде чем подавать заяку
+                    </div>
+                    <div class="invalid-feedback" id="invalidFieldMessage" style="display: none">
+                        Пожалуйста, заполните все необходимые поля
+                    </div>
                 </div>
             </div>
         </div>
 
-        <button type="button" class="btn btn-primary" onclick="window.location.href='final.html'"
+        <button type="button" class="btn" onclick="validateForm()"
                 style="margin-left: 43%; margin-bottom: 5%;">Оформить</button>
     </form>
+
+    <script>
+        function validateForm() {
+            let check = document.getElementById('invalidCheck');
+            let required_fields = document.getElementsByClassName('is-req');
+
+            for (let i = 0; i < required_fields.length; i++) {
+                if (required_fields[i].value === "") {
+                    document.getElementById('invalidFieldMessage').style.display = 'block';
+                    break;
+                }
+                else {
+                    document.getElementById('invalidFieldMessage').style.display = 'none';
+                }
+            }
+            if (!check.checked) {
+                document.getElementById('invalidCheckMessage').style.display = 'block';
+            }
+            else {
+                document.getElementById('invalidCheckMessage').style.display = 'none';
+            }
+            if (document.getElementById('invalidFieldMessage').style.display === 'none' &&
+                document.getElementById('invalidCheckMessage').style.display === 'none') {
+                window.location.href = 'final.html';
+            }
+        }
+        function getTime() {
+            var time = this.document.getElementById('inputTime');
+            if (time.value !== "") {
+               document.cookie ="time:" + time.valueAsNumber;
+            }
+            else {
+             return 0;
+            }
+        }
+    </script>
 </main>
 
 <footer>
