--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
   <hr style="border-top: 1px solid #FFC107; width: 30px">
 <p>100% гарантия получения необходимой визы</p>
 <p>и прозрачность предоставляемых услуг.</p>
-<center><button class="btn" href="#" style="background-color:#3f3f3f;"><img class="d-block w-10" src="if_facebook_986944.png"></button></center>
+<center><button class="btn" href="#" style="background-color:#3f3f3f;"><img class="d-block w-10" src="images/if_facebook_986944.png"></button></center>
 
 </div><br>
 <div class="float-right" style="color:#BDBDBD;text-align: center;"><h5>Свяжитесь с нами</h5>
@@ -25,17 +25,17 @@
 <div class="input-group mb-3">
   <input type="text" class="form-control" placeholder="Ваш номер" aria-label="Recipient's username" aria-describedby="button-addon2">
   <div class="input-group-append">
-    <button class="btn btn-outline-warning" type="button" id="button-addon2" data-toggle="modal" data-target="#myModal" style="color:#BDBDBD;"><img class="d-block w-10" src="2303199-24.png" alt="First slide"></button>
+    <button class="btn btn-outline-warning" type="button" id="button-addon2" data-toggle="modal" data-target="#myModal" style="color:#BDBDBD;"><img class="d-block w-10" src="images/2303199-24.png" alt="First slide"></button>
     <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          
+
         </div>
         <br>
          <div style="text-align: center;"><p>Ожидайте звонка от администратора!</p></div>
-        
+
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
         </div>
@@ -48,7 +48,7 @@
 </div>
 </nav>
 <nav  class="navbar  navbar-expand-sm" style="background-color:#212121;">
-  
+
 <font color="#BDBDBD">2018 © Visa. Все права защищены.</font>
 
 
