--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                     <a class="nav-link" href="index.html"><font color="#F5F5F5">Главная</font></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><font color="#F5F5F5">Услуги</font></a>
+                    <a class="nav-link" href="services.html"><font color="#F5F5F5">Услуги</font></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><font color="#F5F5F5">Вопросы</font></a>
+                    <a class="nav-link" href="ques.html"><font color="#F5F5F5">Вопросы</font></a>
                 </li>
             </ul>
         </div>
         <div class="dropdown">
-            <button class="btn" type="button" onclick="openForm()" id="dropdownMenuButton" data-toggle="dropdown"
+            <button class="btn btn-my" type="button" onclick="openForm()" id="dropdownMenuButton" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">Заказать</button>
 
         </div>
@@ -42,7 +42,7 @@
                 <p class="lead text-center" style="margin-top: 3%; color: #f5f5f5;">Закажи визу и свободно путешествуй по миру </p>
             </div>
             <hr style="border-top: 3px solid #FFC107; width: 50px">
-            <button class="btn" type="button" onclick="openForm()" id="MenuButton"
+            <button class="btn btn-my" type="button" onclick="openForm()" id="MenuButton"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Заказать</button>
 
         </div>
@@ -56,7 +56,7 @@
 
 <script>
     function openForm() {
-        window.location.href='form.html';
+        window.location.href='types.html';
     }
 </script>
 </body>
